--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
   <section id="hero" class="hero-section">
     <div class="image-container tilt" data-tilt>
-      <img src="./robotHand.jpg" alt="Image" class="hero-image image-c" id="moving-image">
+      <img src="nasa.jpg" alt="Image" class="hero-image image-c" id="moving-image">
     </div>
     <img src="al.png" alt="Logo" class="hero-logo">
     <p class="hero-branch">DEPARTMENT OF AI&ML</p>
