--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="fav.png" type="image/png">
   <link rel="stylesheet" href="styles.css">
+  <!-- <link rel="stylesheet" href="styles.css?v=1.0"> -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <link href="https://fonts.googleapis.com/css?family=Russo+One" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
