Changes for align not sure

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
       
             <div class="glassmorphism-container2">
               <img src="iot.png"  class="glassmorphism-image">
-              <p>OPEN THEME</p>
+              <p>OPEN Theme</p>
           </div>
           </div>
       </section>
