Many slight changes

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
           Code of Conduct
         </div>
       </a> -->
-      <a href="https://bit.ly/ftonproblem" target="_blank" rel="noopener noreferrer">
+      <a href="#" target="_blank" rel="noopener noreferrer">
         <div class="button2">
           PROBLEMS
         </div>
