--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <ul class="nav-links">
             <li><a href="#hero">Home</a></li>
             <li><a href="#about">About</a></li>
-           <li><a href="https://forms.gle/Ly6RJRG6G9w4CXbZ8">Apply</a></li>
+           <li><a href="https://bit.ly/4fiIiC7">Apply</a></li>
            <li><a href="#">PROBLEM STATEMENTS</a></li>
             <li><a href="#sponsors">Sponsors</a></li>
             <li><a href="#faq">FAQ</a></li>
