--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
     <br>
     
     <div class="button-container">
-      <a href="https://forms.gle/Ly6RJRG6G9w4CXbZ8" target="_blank" rel="noopener noreferrer">
+      <a href="https://bit.ly/4fiIiC7" target="_blank" rel="noopener noreferrer">
         <div class="register-button">
           REGISTER NOW
         </div>
