FUcked Up Mobile view of Old webPage

--- a/webpage-main/webpage-main/index.html
+++ b/webpage-main/webpage-main/index.html
@@ -202,60 +202,60 @@
         <div class="background-image image-about"></div>
         <br>
         <br>
-        <h2 class="about-title">Sponsors and Partners</h2>
-        <div class="section-divider-container">
+        <h2 class="about-title">Events organized</h2>
+        <!-- <div class="section-divider-container">
             <div class="section-divider"></div>
-            <span class="quantum-text">QUANTUM</span>
             <img src="qa.png" alt="Circular Image" class="circular-image">
             <div class="section-divider"></div>
-        </div>
+          </div> --><br><br><br>
+          <span class="quantum-text">Fusion Techathon 1</span><br><br>
         <div class="glassmorphism-container">
-            <img src="cm.png" alt="Image" class="glassmorphism-image">
+            <img src="FTH.JPG" alt="Image" class="glassmorphism-image">
         </div>
-        <div class="section-divider-container">
+        <!-- <div class="section-divider-container">
           <div class="section-divider"></div>
-          <span class="cyber-text">CYBER</span>
           <img src="cy.png" alt="Circular Image" class="circular-image">
           <div class="section-divider"></div>
-      </div>
+        </div> -->
+        <!-- <span class="cyber-text">Fusion t</span><br><br><br><br><br><br><br><br><br><br> -->
       <div class="side-by-side-container">
 
       <a href="" target="_blank" rel="noopener noreferrer">
-  <div class="glassmorphism-container2">
-    <img src="cms.png" alt="DEVFOLIO LOGO" class="glassmorphism-image">
+  <div class="glassmorphism-container21">
+    <img src="explain.JPG" alt="DEVFOLIO LOGO" class="glassmorphism-image">
   </div>
 </a>
         <a href="https://supermunchies.com/" target="_blank" rel="noopener noreferrer">
-    <div class="glassmorphism-container2">
-      <img src="sm.png" alt="POLYGON LOGO" class="glassmorphism-image">
+    <div class="glassmorphism-container21">
+      <img src="winner.JPG" alt="POLYGON LOGO" class="glassmorphism-image">
   </div>
         </a>
         <a href="" target="_blank" rel="noopener noreferrer">
-    <div class="glassmorphism-container2">
-      <img src="cms.png" alt="POLYGON LOGO" class="glassmorphism-image">
+    <div class="glassmorphism-container21">
+      <img src="total.JPG" alt="POLYGON LOGO" class="glassmorphism-image">
   </div>
         </a>
   </div>
-  <div class="section-divider-container">
+  <!-- <div class="section-divider-container">
     <div class="section-divider"></div>
-    <span class="binary-text">BINARY</span>
     <img src="by.png" alt="Circular Image" class="circular-image">
     <div class="section-divider"></div>
-</div>
+  </div> --><br><br><br><br><br><br>
+  <span class="binary-text">Python Prayana</span>
      <div class="side-by-side-container">
 <a href="" target="_blank" rel="noopener noreferrer">
-      <div class="glassmorphism-container2">
-        <img src="cms.png" alt="FILECOIN LOGO" class="glassmorphism-image">
+      <div class="glassmorphism-container21">
+        <img src="pypr.jpg" alt="FILECOIN LOGO" class="glassmorphism-image">
     </div>
 </a>
        <a href="" target="_blank" rel="noopener noreferrer">
-    <div class="glassmorphism-container2">
-      <img src="re.jpg" alt="REPLIT LOGO" class="glassmorphism-image">
+    <div class="glassmorphism-container21">
+      <img src="pypr2.png" alt="REPLIT LOGO" class="glassmorphism-image">
   </div>
 </a>
 <a href="" target="_blank" rel="noopener noreferrer">
-  <div class="glassmorphism-container2">
-    <img src="cms.png" alt="SOLANA LOGO" class="glassmorphism-image">
+  <div class="glassmorphism-container21">
+    <img src="pypr3.jpg" alt="SOLANA LOGO" class="glassmorphism-image">
 </div>
 </a>
 </div>
