--- a/webpage-main/webpage-main/index.html
+++ b/webpage-main/webpage-main/index.html
@@ -10,14 +10,13 @@
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
 
-
+    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Staatliches&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Lexend:wght@600&display=swap');
     
   </style>
-  
   <script src="script.js"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/tilt.js@1.2.1/dest/tilt.jquery.min.js"></script>
@@ -207,8 +206,8 @@
             <div class="section-divider"></div>
             <img src="qa.png" alt="Circular Image" class="circular-image">
             <div class="section-divider"></div>
-          </div> --><br><br><br>
-          <span class="quantum-text">Fusion Techathon 1</span><br><br>
+          </div> -->
+          <span class="quantum-text">Fusion Techathon 1</span>
         <div class="glassmorphism-container">
             <img src="FTH.JPG" alt="Image" class="glassmorphism-image">
         </div>
