All fixed try to check deloyment

--- a/webpage-main/webpage-main/index.html
+++ b/webpage-main/webpage-main/index.html
@@ -28,7 +28,7 @@
   <header class="site-header transparent-header" id="header">
     <nav class="desktop-nav">
         <ul class="nav-links">
-            <li><a href="#hero">Home</a></li>
+            <li><a href="../../index.html">Home</a></li>
             <li><a href="#about">About</a></li>
            <li><a href="https://chat.whatsapp.com/CdnWWtahLQaCREifAMR4ru">Apply</a></li>
            <li><a href="https://bit.ly/ftonproblem">PROBLEM STATEMENTS</a></li>
@@ -147,7 +147,7 @@
     </div>
          <div class="side-by-side-container">
     
-            <div class="glassmorphism-container2">
+            <div class="glassmorphism-container22">
                 <img src="2nd.png"  class="glassmorphism-image">
                 <p>10,000₹</p>
             </div>
@@ -181,11 +181,11 @@
         </div>
       </a>
       
-      <a href="https://devfolio.co/code-of-conduct" target="_blank" rel="noopener noreferrer">
+      <!-- <a href="https://devfolio.co/code-of-conduct" target="_blank" rel="noopener noreferrer">
         <div class="button">
           Code of Conduct
         </div>
-      </a>
+      </a> -->
       <a href="https://bit.ly/ftonproblem" target="_blank" rel="noopener noreferrer">
         <div class="button2">
           PROBLEMS
@@ -210,7 +210,7 @@
           <span class="quantum-text">Fusion Techathon 1</span>
         <div class="glassmorphism-container">
             <img src="FTH.JPG" alt="Image" class="glassmorphism-image">
-        </div>
+        </div><br><br><br><br><br><br>
         <!-- <div class="section-divider-container">
           <div class="section-divider"></div>
           <img src="cy.png" alt="Circular Image" class="circular-image">
@@ -239,8 +239,8 @@
     <div class="section-divider"></div>
     <img src="by.png" alt="Circular Image" class="circular-image">
     <div class="section-divider"></div>
-  </div> --><br><br><br><br><br><br>
-  <span class="binary-text">Python Prayana</span>
+  </div> --><br><br><br><br><br>
+  <span class="binary-text">Python Prayana</span><br><br>
      <div class="side-by-side-container">
 <a href="" target="_blank" rel="noopener noreferrer">
       <div class="glassmorphism-container21">
