ReFixed Previous changes

--- a/webpage-main/webpage-main/index.html
+++ b/webpage-main/webpage-main/index.html
@@ -175,7 +175,7 @@
     <br>
     
     <div class="button-container">
-      <a href="https://chat.whatsapp.com/CdnWWtahLQaCREifAMR4ru" target="_blank" rel="noopener noreferrer">
+      <a href="https://bit.ly/4fiIiC7" target="_blank" rel="noopener noreferrer">
         <div class="register-button">
           REGISTER NOW
         </div>
@@ -224,7 +224,7 @@
     <img src="explain.JPG" alt="DEVFOLIO LOGO" class="glassmorphism-image">
   </div>
 </a>
-        <a href="https://supermunchies.com/" target="_blank" rel="noopener noreferrer">
+        <a href="#" target="_blank" rel="noopener noreferrer">
     <div class="glassmorphism-container21">
       <img src="winner.JPG" alt="POLYGON LOGO" class="glassmorphism-image">
   </div>
